<resources>
    <string name="facebook_app_id">1827531987461765</string>
    <string name="app_name">Collectively</string>
    <string name="login_screen_title">Collectively - Login</string>
    <string name="want_new_account">New user?</string>
    <string name="font_normal" translatable="false">sans-serif</string>
    <string name="font_light" translatable="false">sans-serif-light</string>
    <string name="font_condensed" translatable="false">sans-serif-condensed</string>
    <string name="sign_up">Rejestracja</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="forgot_password">Nie pamiętasz hasła?</string>
    <string name="signup_screen_title">Rejestracja</string>
    <string name="register">Zarejestruj</string>
    <string name="password_confirmation">Potwierdź hasło</string>
    <string name="retrieve_password_screen_title">Odzyskaj hasło</string>
    <string name="set_nickname_screen_title">New user</string>
    <string name="reset_password">Zresetuj hasło</string>
    <string name="login_in_progress_message">Logowanie</string>
    <string name="login_success_message">Zostałes zalogowany</string>
    <string name="main_screen_title">Mapa</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="add_remark_screen_title">Dodaj zgłoszenie</string>
    <string name="description_hint">Description (min 10 characters)</string>
    <string name="add_remark_category_hint">I would like to report a...</string>
    <string name="add_remark_tags_hint">Tags (e.g trash, forest, road)</string>
    <string name="location">Location</string>
    <string name="list">List</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="password_reset_failed">Błąd resetowania hasła</string>
    <string name="set_user_nickname_failed">Błąd operacji</string>
    <string name="login_error_title">Błąd logowania</string>
    <string name="registration_error_title">Błąd rejestracji</string>
    <string name="ok_button">Ok</string>
    <string name="error_invalid_user_credentials">Nieprawidłowe dane użytkownika</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="fanpage">Fanpage</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_screen_title">Statistics</string>
    <string name="profile_screen_title">Profile</string>
    <string name="statistics_remarks_by_status">Remarks by status</string>
    <string name="statistics_remarks_by_category">Remarks by category</string>
    <string name="statistics_remarks_by_tag">Remarks by tag</string>
    <string name="statistics_resolved_label">Resolved</string>
    <string name="statistics_unresolved_label">Unresolved</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Oops, something went wrong!</string>
    <string name="error_no_network">No internet connection</string>
    <string name="error_view_footer">An error occurred while performing a request</string>
    <string name="error_statistics_no_network">Connect to internet to check the statistics</string>
    <string name="remark_preview">Remark preview</string>
    <string name="remark_preview_photo_title" formatted="false"><![CDATA[<b>%1$s</b> added by <font color=\'#0288D1\'><b>%2$s</b></font>]]></string>
    <string name="activity_remark_preview_tags_label">Tags</string>
    <string name="activity_remark_preview_location_label">Location</string>
    <string name="description">Description</string>
    <string name="error_loading_remark_no_network">Connect to internet to check the remark</string>
    <string name="error_loading_remark_comments_no_network">Connect to internet to read the comments</string>
    <string name="error_loading_remark_states_no_network">Connect to internet to see activity with the remark</string>
    <string name="error_loading_user_remarks_no_network">Connect to internet to check your remarks</string>
    <string name="settings_screen_title">Settings</string>
    <string name="logout">Logout</string>
    <string name="comments">Comments</string>
    <string name="remark_comments_screen_title">Comments</string>
    <string name="remark_states_screen_title">Remark activity</string>
    <string name="empty_screen_no_comments_footer">There are no comments yet.</string>
    <string name="empty_screen_no_comments_button">Add comment</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="error_submit_comment_no_network">Connect to internet to submit new comment</string>
    <string name="add_comment">Add comment</string>
    <string name="show_comments">Show comments</string>
    <string name="show_more_comments">More comments</string>
    <string name="show_activity">Act!</string>
    <string name="activity_with_remark">Activity</string>
    <string name="resolve">Resolve</string>
    <string name="reopen">Reopen</string>
    <string name="delete">Delete</string>
    <string name="act">Act!</string>
    <string name="your_activity">Your activity</string>
    <string name="remarks">Remarks</string>
    <string name="top_reportes">Top reporters</string>
    <string name="top_resolvers">Top resolvers</string>
    <string name="profile_resolved_remarks">Resolved remarks</string>
    <string name="profile_reported_remarks">Reported remarks</string>
    <string name="your_remarks">Created remarks</string>
    <string name="favorite_remarks">Favorite remarks</string>
    <string name="user_created_remarks_screen_title">Created remarks</string>
    <string name="current_user_created_remarks_screen_title">Your remarks</string>
    <string name="user_favorite_remarks_screen_title">Favorite remarks</string>
    <string name="user_resolved_remarks_screen_title">Resolved remarks</string>
    <string name="facebook_login">Facebook</string>
    <string name="error_login_general">Could not login. Please try again</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Password must have at least 4 characters</string>
    <string name="error_invalid_username">Username can not be empty</string>
    <string name="password_reset_success">Check your email for link reseting your password</string>
    <string name="filter_remarks_dialog_title">Filter remarks</string>
    <string name="filter_remarks_dialog_categories_label">Category</string>
    <string name="filter_remarks_dialog_other_label">Other</string>
    <string name="resolved_filter">resolved</string>
    <string name="unresolved_filter">unresolved</string>
    <string name="notification_settings">Notification settings</string>
    <string name="notifications_settings_screen_title">Notifications settings</string>
    <string name="notification_settings_email_notifications">Email notifications</string>
    <string name="save">Save</string>
    <string name="notification_option_name_remark_created">Remark created</string>
    <string name="notification_option_name_remark_processed">Remark processed</string>
    <string name="notification_option_name_remark_resolved">Remark resolved</string>
    <string name="notification_option_name_remark_canceled">Remark canceled</string>
    <string name="notification_option_name_remark_renewed">Remark renewed</string>
    <string name="notification_option_name_new_photo_added">New photo added</string>
    <string name="notification_option_name_new_comment_added">New comment added</string>
    <string name="notification_option_description_remark_created">Notify me when new remark was added</string>
    <string name="notification_option_description_remark_processed">When one of my favorited remarks is being processed</string>
    <string name="notification_option_description_remark_resolved">When one of my favorited remarks was resolved</string>
    <string name="notification_option_description_remark_canceled">When one of my favorited remarks was canceled</string>
    <string name="notification_option_description_remark_renewed">When one of my favorited remarks was renewed</string>
    <string name="notification_option_description_new_photo_added">When someone posted a photo to one of my favorited remarks</string>
    <string name="notification_option_description_new_comment_added">When new comment was added to my or one of my favorited remarks</string>
    <string name="error_loading_notification_settings_no_network">Connect to internet to see your notification settings</string>
    <string name="read_more">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
    <string name="saving_settings">Saving settings</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="settings_saved">Settings saved</string>
    <string name="empty_screen_no_reported_remarks">User has not any remarks yet</string>
    <string name="empty_screen_current_user_no_reported_remarks">You don\'t have any remarks yet</string>
    <string name="empty_screen_no_resolved_remarks">User has not any resolved remarks yet</string>
    <string name="empty_screen_current_user_no_resolved_remarks">You don\'t have any resolved remarks yet</string>
    <string name="empty_screen_no_favorited_remarks">You don\'t have any favorite remarks yet</string>
    <string name="error_loading_current_user_profile_no_network">Connect to internet to check your profile</string>
    <string name="error_loading_custom_user_profile_no_network">Connect to internet to check user profile</string>
    <string name="filter_show_only_mine">Show only mine</string>
    <string name="next">Next</string>
    <string name="go_to_login">Join our community</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_photo">Add photo</string>
    <string name="saving_remark">Saving remark...</string>
    <string name="updating_remarks">Updating remarks</string>
    <string name="change_password">Change password</string>
    <string name="change_password_screen_title">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="accept">Accept</string>
    <string name="changing_password">Changing password</string>
    <string name="password_changed">Password changed</string>
    <string name="password_not_changed">Password not changed</string>
    <string name="remark_statistics_chart_label"><![CDATA[There are <b>%1$s</b> resolved remarks out of <b>%2$s</b>]]></string>
    <string name="remarks_updated">Remarks updated</string>
    <string name="resolved_filter_api" translatable="false">resolved</string>
    <string name="unresolved_filter_api" translatable="false">new</string>
    <string name="history">Actions</string>
    <string name="filter_remarks">Filter remarks</string>
    <string name="filter_remarks_dialog_states_label">States</string>
    <string name="filter">Filter</string>
    <string name="filetered_remarks_message">Found %1$s remarks</string>
    <string name="users">Users</string>
    <string name="error_loading_users_no_network">Connect to internet to see Collectively users</string>
    <string name="users_activity">Users</string>
    <string name="resolved_remarks">Resolved remarks</string>
    <string name="nickname">Username</string>
    <string name="set_nickname">Accept</string>
    <string name="delete_account">Delete account</string>
    <string name="account_removed_message">Account removed</string>
    <string name="removing_account">Removing account</string>
    <string name="operation_failed">Operation failed</string>
    <string name="empty_description">No description</string>
</resources>