<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/toolbar_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include layout="@layout/view_toolbar_with_title"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_wrapper"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal">

        <EditText
            android:id="@+id/oldPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_light"
            android:hint="@string/old_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/newPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_light"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>

        <android.support.v7.widget.CardView
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="@dimen/spacing_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:fontFamily="@string/font_normal"
                android:gravity="center"
                android:padding="@dimen/spacing_normal"
                android:text="@string/accept"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
