<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/switcherError"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        card_view:cardElevation="1dp"
        card_view:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red_dark_2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/switcherErrorTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_condensed"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/something_went_wrong"
                    android:textStyle="bold"
                    android:textColor="@color/font_light"
                    android:textSize="@dimen/font_large"/>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/switcherErrorImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:srcCompat="@drawable/ic_error_no_internet_connection_white_24dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/switcherErrorFooter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_light"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium"
                    android:textSize="@dimen/font_medium"
                    android:text="@string/error_view_footer"
                    android:textColor="@color/font_light"/>

            </LinearLayout>

            <TextView
                android:id="@+id/switcherErrorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@string/font_normal"
                android:gravity="center"
                android:padding="@dimen/spacing_medium"
                android:text="@string/retry"
                android:textStyle="bold"
                android:textColor="@color/red_dark_2"
                android:textSize="@dimen/font_medium"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

