<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/background"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_margin="@dimen/spacing_large"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/red_dark_2"
            android:fontFamily="@string/font_condensed"
            android:gravity="center"
            android:text="@string/filter_remarks_dialog_title"
            android:textAllCaps="true"
            android:padding="@dimen/spacing_small"
            android:textStyle="bold"
            android:textColor="@color/font_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@string/font_condensed"
            android:gravity="left"
            android:text="@string/filter_remarks_dialog_categories_label"
            android:textAllCaps="true"
            android:padding="@dimen/spacing_small"
            android:textStyle="bold"
            android:textColor="@color/font_dark_hint"/>

        <LinearLayout
            android:id="@+id/categoriesLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@string/font_condensed"
            android:gravity="left"
            android:text="@string/filter_remarks_dialog_states_label"
            android:textAllCaps="true"
            android:padding="@dimen/spacing_small"
            android:textStyle="bold"
            android:textColor="@color/font_dark_hint"/>

        <LinearLayout
            android:id="@+id/statesLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/filter"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:fontFamily="@string/font_normal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
