<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/background"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_margin="@dimen/spacing_large"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/red_dark_2"
            android:fontFamily="@string/font_condensed"
            android:gravity="center"
            android:text="@string/add_photo"
            android:textAllCaps="true"
            android:padding="@dimen/spacing_small"
            android:textStyle="bold"
            android:textColor="@color/font_light"/>

        <TextView
            android:id="@+id/cameraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@string/font_condensed"
            android:textSize="@dimen/font_large"
            android:gravity="center"
            android:text="@string/camera"
            android:textAllCaps="true"
            android:padding="@dimen/spacing_large"/>

        <View
            android:background="@color/grey"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/galleryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@string/font_condensed"
            android:textSize="@dimen/font_large"
            android:text="@string/gallery"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="@dimen/spacing_large"/>

    </LinearLayout>

</LinearLayout>
